# Student_Management_System_Magizh

./: .gitignore  README.md  render.yaml
backend/: .env.example  alembic.ini  check_db.py  debug_users.py  pyproject.toml  requirements.txt  run_server.py  test_all.py  test_api_flow.py
backend/alembic/: README  env.py
backend/alembic/versions/: 66f7810814b8_add_name_and_is_deleted_to_users.py  7368c9a70003_create_student_and_junction_tables.py  8c8ea677e405_add_assignment_and_approval_to_users.py  __init__.py  a1b2c3d4e5f6_create_users_table.py  a2b3c4d5e6f7_create_todos_table.py  b2c3d4e5f6a7_create_projects_table.py  b3c4d5e6f7a8_create_daily_content_table.py  c3d4e5f6a7b8_create_student_notes_table.py  d4e5f6a7b8c9_create_activity_logs_table.py  e5f6a7b8c9d0_create_notifications_table.py  f01f87872df5_create_attendance_tables.py  f470e66cf66e_add_roles_permissions_tables.py  f470e66cf66e_create_roles_permissions.py  f6a7b8c9d0e1_create_daily_content_table.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: config.py  exceptions.py  permissions.py  response.py  security.py
backend/app/database/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  activity_log.py  attendance.py  daily_content.py  notification.py  permission.py  project.py  referral_link.py  role.py  role_permission.py  student.py  student_note.py  todo.py  user.py  user_permission.py
backend/app/repositories/: __init__.py  activity_log.py  attendance.py  daily_content.py  notification.py  permission.py  project.py  referral_link.py  role.py  (+5 more)
(+85 files in other folders)
